@@ -82,6 +82,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   case for ConfigurablePODTemplate
 - Only send delay expiration/expired mail notifications if advice is not given
   (not_given, asked_again or hidden_during_redaction)
+- Make sure we use getRaw() for MeetingItem.getRawMotivation and MeetingItem.getRawDecision or transforms are applied and
+  we lose (for example) resolveuid links
 
 4.0 (2017-08-04)
 ----------------
